Fix Repo URL truncate

--- a/modules/st2-details/style.less
+++ b/modules/st2-details/style.less
@@ -93,6 +93,7 @@
       &-value {
         line-height: 34px;
 
+        overflow: hidden;
         flex: 1;
 
         margin: 0;
